# STM32F103-SPL-Template

./: .gitignore  CMakeLists.txt  README.md  create_new_project.bat  stm32f103c8t6.ld
.claude/: settings.local.json
Start/: startup_stm32f10x_md_gcc.s
User/: main.c
